--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('S_UPLOAD_STORE_FILE')) {
+                storeFile file(S_UPLOAD_STORE_FILE)
+                storePassword S_UPLOAD_STORE_PASSWORD
+                keyAlias S_UPLOAD_KEY_ALIAS
+                keyPassword S_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -163,9 +171,7 @@ android {
             }
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
